--- a/01 - Intro a Python/clase_03_gus.ipynb
+++ b/01 - Intro a Python/clase_03_gus.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,14 +27,15 @@
     "        list: sorted list\n",
     "    \"\"\"\n",
     "    sorted = []\n",
-    "    while lista:\n",
+    "    lista = list(lista) # hace una copia de la lista\n",
+    "    while lista: # repito hasta que la lista este vacia\n",
     "        min = lista[0]\n",
     "        for num in lista:\n",
-    "            if not reverse:\n",
-    "                if num < min:\n",
+    "            if reverse:\n",
+    "                if num > min:\n",
     "                    min = num\n",
     "            else:\n",
-    "                if num > min:\n",
+    "                if num < min:\n",
     "                    min = num\n",
     "        sorted.append(min)\n",
     "        lista.remove(min)\n",
@@ -43,7 +44,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lista = [5, 4, 3, 2, 1, 10, 0, 3, 3, -10, 8, 2, 5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -52,13 +62,12 @@
        "[-10, 0, 1, 2, 2, 3, 3, 3, 4, 5, 5, 8, 10]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "lista = [5, 4, 3, 2, 1, 10, 0, 3, 3, -10, 8, 2, 5]\n",
     "selection_sort(lista, reverse=False)"
    ]
   }
